# dspy_basics

./: .env.example  .gitignore  pyproject.toml
docs/notebooks/: dspy_poc.ipynb  gepa_medical_condition_local.ipynb
src/: hackathon_dataset_generation.py
src/hackathon/: datageneration.py  gepa_medical_condition_local.ipynb  gepa_medical_condition_local_shubeeksh.ipynb  health_classificationprompt.txt  redherringprompt.md
src/hackathon/outsidesumamry/: healthcalssificationprompt_mdeical.md
src/svlearn_dspy/: mcp_server.py
